<resources>
    <string name="app_name">vCanteen</string>
    <string name="title_activity_email_enter_page">emailActivity</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="title_activity_homepage">homepageActivity</string>
    <string name="title_activity_vendor_list">vendorListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_orders">ORDERS</string>
    <string name="title_settings">SETTINGS</string>
    <string name="facebook_app_id">1176355219192143</string>
    <string name="removeClick"><u>REMOVE</u></string>
    <string name="fb_login_protocol_scheme">fb1176355219192143</string>
    <string name="in_progress_button">IN PROGRESS</string>
    <string name="history_button">HISTORY</string>
    <string name="order_name">Order Name</string>
    <string name="order_price">30 ฿</string>
    <string name="order_name_extra">Extra</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="order_date">01/01/2018</string>
    <string name="order_status">Waiting for pickup</string>
    <string name="order_id">Order ID : 00</string>
    <string name="foodDescription">TODO</string>
    <string name="confirm_pickup_title">Your order is ready at slot</string>
    <string name="confirm_pickup_popup_description">Only press confirm after picking up your meal.</string>
    <string name="orderSlot">0</string>
    <string name="confirm_text">CONFIRM</string>
    <string name="pickup_text">PICK UP</string>
    <string name="dismiss_text">DISMISS</string>
    <string name="order_done_title">One of your order is done.</string>
    <string name="popup_5min_title">You have 5 minutes left to pick up your order.</string>
    <string name="popup_timeout_title">Your order has expired.\nIt might be at the following slot.</string>
    <string name="popup_timeout_subtitle_text">otherwise, it will be at the timeout shelf.</string>
    <string name="order_slot">123</string>
    <string name="popup_order_cancelled_title">One of your orders\nhas been cancelled.</string>
    <string name="go_to_order">GO TO ORDER</string>
    <string name="popup_confirm_pickup_title">Your order is ready at slot.</string>
    <string name="popup_confirm_pickup_subtitle_text">Only press confirm after picking up your meal.</string>
    <string name="pickup_tab">  PICK UP ▶  </string>
    <string name="report_bug_hint">Report any bug here, every little things will improve your experiences with the app :)</string>
    <string name="popup_payment_link_title_text">Link Payment</string>
    <string name="popup_payment_link_service_provider">SCB EASY</string>
    <string name="popup_payment_link_account_number_text">ACCOUNT NUMBER</string>
    <string name="cunex_text">CU NEX</string>
    <string name="scbeasy_text">SCB EASY</string>
    <string name="kplus_text">K PLUS</string>
    <string name="truemoneywallet_text">TrueMoney Wallet</string>
    <string name="sp_link_status">  LINK  </string>
    <string name="unlink_account_text">Unlink your account</string>
    <string name="unlink_description_text">Do you wish to unlink serviceProvider\n from your account?</string>
    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="serviceProvider">
        <item>CU NEX</item>
        <item>SCB EASY</item>
        <item>K PLUS</item>
        <item>TrueMoney Wallet</item>
    </string-array>
    <string name="tutorial_one_title">NO MORE\nWAITING\nIN QUEUE</string>
    <string name="tutorial_two_title">JUST PAY &amp;\nPICK UP</string>
    <string name="tutorial_one_desc">Order before arriving? See what’s\navailable on the menu of your favourite\nvendor today? It couldn’t get any better!</string>
    <string name="tutorial_two_desc">We make it simple. Choose or customize\nyour menu, order, pay, and just enjoy\nchatting with your friends until your\norder is ready.</string>
    <string name="mustBeText">Must be letter, number or these character . , _ - * ‘  # &amp; () $ @ ! ?</string>
</resources>
