<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical"
    android:background="#ffffffff">

    <TextView
        android:id="@+id/confirmPickupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:text="@string/confirm_pickup_title"
        android:textAlignment="center"
        android:textColor="#FF9C9C"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/orderSlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orderSlot"
        android:textAlignment="center"
        android:textColor="@color/colorStatusRed"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirmPickupDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_pickup_popup_description"
        android:textAlignment="center"
        android:textColor="#C4C4C4"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok1_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_margin="5dp"
            android:layout_marginRight="10dp"
            android:text="OK"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_margin="5dp"
            android:layout_marginLeft="10dp"
            android:text="CANCEL"
            android:textColor="#C4C4C4"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>